--- a/resources/sass/global/responsive.scss
+++ b/resources/sass/global/responsive.scss
@@ -26,4 +26,8 @@
       margin-right: 0;
   }
 
+  .nav-link {
+      padding: 0.5rem !important;
+  }
+
 }
